test_suite/tests/ui/expected-string/float.stderr
error: expected serde rename attribute to be a string: `rename = "..."`
 --> $DIR/float.rs:5:22
  |
5 |     #[serde(rename = 3.14)]
  |                      ^^^^
